changed the issue with image element frontend height (stretch)

--- a/inc/frontend/css/wp-table-builder-frontend.css
+++ b/inc/frontend/css/wp-table-builder-frontend.css
@@ -129,6 +129,7 @@ table.wptb-preview-table-mobile {
 
 .wptb-image-wrapper img {
     width: 100%;
+    height: auto;
 }
 
 .wptb-text-container>div,
